[package]
name = "tunnel-fission"
version = "0.1.0"
edition = "2021"

[lib]
name = "tunnel_fission_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
taurpc = "0.3.2"
specta = { version = "=2.0.0-rc.20", features = ["derive"] }
specta-util = { version = "0.0.7", features = ["export"] }
tokio = { version = "1", features = ["full"] }
